# cs2-config-formatter

./: .gitignore  DEV.md  LICENSE  README.md  pyproject.toml
cfgfmt/: cli.py  formatter.py  fs.py  io.py
scripts/: dev.ps1
tests/: test_cli.py  test_formatter.py  test_io.py
