[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2-config-formatter"
version = "0.1.0"
description = "A formatter/aligner for Counter-Strike 2 (CS2) .cfg config files (whitespace-only formatting)."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "MikuHello"},
]
keywords = ["cs2", "counter-strike 2", "config", "cfg", "formatter", "aligner"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]

[project.scripts]
cfgfmt = "cfgfmt.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.6",
  "mypy>=1.11",
  "twine>=5",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["cfgfmt*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
files = ["cfgfmt"]
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
